# transcompyler

./: .gitignore  LICENSE  README.md  pyproject.toml
src/transcompyler/: generator.py  grammar.py  lexer.py  token.py  transcompyler.py
src/transcompyler/utils/: errors.py
tests/: test_generator.py  test_grammar.py  test_lexer.py
tests/utils/: compare_tokens.py  create_token_str.py
