[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transcompyler"
version = "0.0.1"
authors = [
  { name="Antoine Meloche" }
]
description = "A library to make the creation of transcompilers in python a breeze."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating Sustem :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Antoine-Meloche/transcompyler"
"Bug Tracker" = "https://github.com/Antoine-Meloche/transcompyler/issues"